--- a/about.html
+++ b/about.html
@@ -19,19 +19,8 @@
             </div>
         </ul>
     </nav>
-    <div class="Heterometrus">
-        <a href="heterometrus.html">
-        <img src="/images/pc.png" alt="i5-12400F, RX 6600, 16GB 3200MHz, 512GB SSD PC" height="300px" width="300px" />
-        <h2>Геймърски компютър <span style="color: #850f13;">Heterometrus</span></h2>
-        <h2 style="font-size: 25px;">1499лв</h2>    
-        </a>
-        <ul>
-            <li>i5-12400F</li>
-            <li>RX 6600</li>
-            <li>16GB 3200MHz</li>
-            <li>512GB SSD</li>
-        </ul>
-    </div>
+   <p style="font-size: 100px;">Обичкам си те много, сладурче :D</p>
+    
     <div class="info">
         <h3 style="padding-left: 50px; text-align: center; color: gray;">Gay<br />
             Contacts<br />
